--- a/t.ipynb
+++ b/t.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 8,
    "id": "36ab6ccf",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,84 @@
     "import sklearn.datasets as skl\n",
     "from DecisionTreeModels.ClassificationTree import MyTreeClf"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "34792eaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('banknote+authentication.zip', header=None)\n",
+    "df.columns = ['variance', 'skewness', 'curtosis', 'entropy', 'target']\n",
+    "X, y = df.iloc[:,:4], df['target']\n",
+    "tr = MyTreeClf(15, 20, 30, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8da24193",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr.make_splits(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "103ae482",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "variance -0.10864999999999903 0.36700733555350207\n"
+     ]
+    }
+   ],
+   "source": [
+    "col, val, ig = tr.get_best_split(X, y)\n",
+    "print(col, val, ig)\n",
+    "x2, y2 = X[X[col]>val], y[X[col]>val]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97208fd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "variance 2.2025000000000006 0.17037151581533277\n"
+     ]
+    }
+   ],
+   "source": [
+    "tr.fit(x2, y2)\n",
+    "tr.print_tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffcc41b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4627230",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -34,184 +112,6 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame({'A': [1, 2,3,4,5], 'B': [3,4,5,6,7]})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9288e56c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.isin({'A':[1], 'B':[3]})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "id": "d06b32d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.11\n",
-      "0.8\n",
-      "-2.34\n",
-      "-1.23\n",
-      "1.78\n",
-      "0.04\n",
-      "1.14\n",
-      "0.44\n",
-      "0.85\n",
-      "-0.91\n",
-      "-1.55\n",
-      "0.85\n",
-      "-1.3\n",
-      "-0.32\n",
-      "0.74\n",
-      "-1.91\n",
-      "0.28\n",
-      "-1.69\n",
-      "-1.05\n",
-      "0.94\n",
-      "1.82\n",
-      "-2.03\n",
-      "-1.43\n",
-      "-0.53\n",
-      "0.19\n",
-      "-2.5\n",
-      "1.13\n",
-      "1.37\n",
-      "-1.66\n",
-      "-1.4\n",
-      "1.62\n",
-      "-1.19\n",
-      "-1.55\n",
-      "-2.54\n",
-      "0.69\n",
-      "-0.81\n",
-      "-0.19\n",
-      "0.61\n",
-      "-0.13\n",
-      "-1.81\n",
-      "-2.8\n",
-      "0.93\n",
-      "1.26\n",
-      "-0.72\n",
-      "1.05\n",
-      "-1.59\n",
-      "-0.95\n",
-      "0.1\n",
-      "-1.99\n",
-      "0.85\n",
-      "-1.14\n",
-      "-0.97\n",
-      "-0.81\n",
-      "-1.29\n",
-      "-1.03\n",
-      "1.77\n",
-      "-1.13\n",
-      "0.25\n",
-      "0.76\n",
-      "-2.17\n",
-      "0.31\n",
-      "-1.94\n",
-      "-2.23\n",
-      "0.2\n",
-      "0.82\n",
-      "-1.27\n",
-      "-2.52\n",
-      "-0.71\n",
-      "1.5\n",
-      "-1.67\n",
-      "1.31\n",
-      "0.75\n",
-      "0.72\n",
-      "0.8\n",
-      "1.0\n",
-      "0.68\n",
-      "-0.5\n",
-      "-2.08\n",
-      "-1.02\n",
-      "-1.36\n",
-      "-0.45\n",
-      "1.52\n",
-      "-1.08\n",
-      "1.31\n",
-      "0.31\n",
-      "-1.38\n",
-      "0.47\n",
-      "0.63\n",
-      "-1.66\n",
-      "1.07\n",
-      "-0.09\n",
-      "0.75\n",
-      "0.68\n",
-      "-1.14\n",
-      "0.96\n",
-      "-0.55\n",
-      "-2.23\n",
-      "-1.88\n",
-      "0.2\n",
-      "-1.98\n",
-      "1.98\n",
-      "-3.04\n",
-      "-1.03\n",
-      "-0.98\n",
-      "-1.85\n",
-      "-1.33\n",
-      "-0.9\n",
-      "-0.47\n",
-      "-2.21\n",
-      "-1.17\n",
-      "0.36\n",
-      "0.94\n",
-      "-0.34\n",
-      "-0.14\n",
-      "-1.66\n",
-      "-0.71\n",
-      "-0.46\n",
-      "-1.01\n",
-      "0.1\n",
-      "-0.59\n",
-      "-1.13\n",
-      "0.77\n",
-      "0.45\n",
-      "1.72\n",
-      "1.27\n",
-      "-0.8\n",
-      "1.29\n",
-      "1.55\n",
-      "0.2\n",
-      "-0.19\n",
-      "-0.89\n",
-      "0.31\n",
-      "-1.17\n",
-      "-0.63\n",
-      "-0.77\n",
-      "0.91\n",
-      "1.17\n",
-      "-0.89\n",
-      "-1.61\n",
-      "1.83\n",
-      "-1.54\n",
-      "-1.44\n",
-      "-0.85\n",
-      "0.9\n",
-      "-1.88\n",
-      "-0.41\n",
-      "1.5\n",
-      "1.28\n",
-      "0.11\n",
-      "-1.98\n"
-     ]
-    }
-   ],
-   "source": [
-    "for  _, r in X.iterrows():\n",
-    "    print(r[\"col_0\"])"
    ]
   },
   {
